update pwfup contract, add pwscr contract and fixed some bugs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name="section_A">  Module A: SOCIO DEMOGRAPHIC INFORMATION (KMC-2018-2020) </string>
     <string name="cra01">ڇا جواب ڏيندڙ تحقيق ۾ حصو وٺڻ لاءِ تيار آهي</string>
     <string name="crataluka">تعلقه جو نالو</string>
+    <string name="crataluka1">جانچ جو علائقو</string>
     <string name="cruc">يونين ڪائونسل جو نالو</string>
     <string name="crvillage">ڳوٺ/ ايريا جو نالو</string>
     <string name="crwoman">عورت جو نالو</string>
