done functionality and changes of form 1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -253,33 +253,34 @@
     <string name="kf1b03"> ۾ ڇا شرڪت ڪندڙ چونڊيل يونين ڪائونسل </string>
     <string name="kfh2"> Exclusion Criteria </string>
     <string name="kf1b04"> ڇا ٻار کي سامهون ڏنل ڪا نشاني يا علامت آهي؟ آپشن جي سامهون ها يا نه لکو </string>
-    <string name="kf1b04a"> شديد طبعي انفيڪشن </string>
-    <string name="kf1b04a01"> صرف هٿ لڳائڻ سان ئي چر پر ڪري ٿو </string>
-    <string name="kf1b04a02"> ماءُ جو کير صحيحِ نه ٿو پئي </string>
-    <string name="kf1b04a03"> بخار 38 سينٽي گريڊ يا ان کان وڌيڪ </string>
-    <string name="kf1b04a04"> تمام گھڻو ٿڌو (32 سينٽي گريڊ کان گھٽ) </string>
-    <string name="kf1b04a05"> شديد پاسراٽيون/ کڏا پوڻ </string>
-    <string name="kf1b04b"> شديد بيماريون </string>
-    <string name="kf1b04b01"> بيهوشي </string>
-    <string name="kf1b04b02"> جھٽڪا </string>
-    <string name="kf1b04b03"> کير پيئڻ جي بلڪل به ڪابل نه هجڻ </string>
-    <string name="kf1b04b04"> ساهه کڻڻ بند ٿي وڃڻ </string>
-    <string name="kf1b04b05"> روئڻ جي ڪابل نه هجڻ </string>
-    <string name="kf1b04b06"> نيرو ٿي وڃڻ </string>
-    <string name="kf1b04b07"> تارون جو اڀرڻ </string>
-    <string name="kf1b04b08"> ڪو وڏو پيدائشي نڪس </string>
-    <string name="kf1b04b09"> آپريشن جي ضرورت ۾ ڪنهن اسپتال ڏانهن موڪلڻ جي ضرورت </string>
-    <string name="kf1b04c"> تيز رفتاري سان ساهه کڻڻ </string>
-    <string name="kf1b04c01"> ساهه کڻڻ جي رفتار هڪ منٽ ۾ 60 دفعا يا ان کان وڌيڪ هجڻ </string>
+    <string name="kf1b04_h1"> شديد طبعي انفيڪشن </string>
+    <string name="kf1b0401"> صرف هٿ لڳائڻ سان ئي چر پر ڪري ٿو </string>
+    <string name="kf1b0402"> ماءُ جو کير صحيحِ نه ٿو پئي </string>
+    <string name="kf1b0403"> بخار 38 سينٽي گريڊ يا ان کان وڌيڪ </string>
+    <string name="kf1b0404"> تمام گھڻو ٿڌو (32 سينٽي گريڊ کان گھٽ) </string>
+    <string name="kf1b0405"> شديد پاسراٽيون/ کڏا پوڻ </string>
+    <string name="kf1b04_h2"> شديد بيماريون </string>
+    <string name="kf1b0406"> بيهوشي </string>
+    <string name="kf1b0407"> جھٽڪا </string>
+    <string name="kf1b0408"> کير پيئڻ جي بلڪل به ڪابل نه هجڻ </string>
+    <string name="kf1b0409"> ساهه کڻڻ بند ٿي وڃڻ </string>
+    <string name="kf1b0410"> روئڻ جي ڪابل نه هجڻ </string>
+    <string name="kf1b0411"> نيرو ٿي وڃڻ </string>
+    <string name="kf1b0412"> تارون جو اڀرڻ </string>
+    <string name="kf1b0413"> ڪو وڏو پيدائشي نڪس </string>
+    <string name="kf1b0414"> آپريشن جي ضرورت ۾ ڪنهن اسپتال ڏانهن موڪلڻ جي ضرورت </string>
+    <string name="kf1b04_h3"> تيز رفتاري سان ساهه کڻڻ </string>
+    <string name="kf1b0415"> ساهه کڻڻ جي رفتار هڪ منٽ ۾ 60 دفعا يا ان کان وڌيڪ هجڻ </string>
     <string name="kf1b05"> ڇا ماءُ کي سامهون ڏنل ڪا بيماري / مسئلو آهي جيڪو هن کي ٻار کي ڪي ايم سي ڏيڻ کان روڪي ٿو آپشن جي سامهون ها يا نه لکو. </string>
-    <string name="kf1b05a"> ماءُ جون بيماريون </string>
-    <string name="kf1b05a01"> تمام گھڻو بخار </string>
-    <string name="kf1b05a02"> اڪليمپسيه / جهٽڪا </string>
-    <string name="kf1b05a03"> ويم کان پوءِ رت جو تمام گھڻو اچڻ / ضايع ٿيڻ </string>
-    <string name="kf1b05a04"> نفسياتي بيماري </string>
-    <string name="kf1b05a05"> ٻيو ڪجھ </string>
+    <string name="kf1b05_h1"> ماءُ جون بيماريون </string>
+    <string name="kf1b0501"> تمام گھڻو بخار </string>
+    <string name="kf1b0502"> اڪليمپسيه / جهٽڪا </string>
+    <string name="kf1b0503"> ويم کان پوءِ رت جو تمام گھڻو اچڻ / ضايع ٿيڻ </string>
+    <string name="kf1b0504"> نفسياتي بيماري </string>
+    <string name="kf1b0505"> ٻيو ڪجھ </string>
     <string name="kf1b06"> ڇا ٻار کي ڪنهن جديد حفاظتي مرڪز تي موڪلڻ جي ضرورت هئي؟ </string>
     <string name="kfh3"> Eligibility </string>
+    <string name="kfh4"> Informed Consent </string>
     <string name="kf1b07"> ڇا اثرائتي حصو وٺڻ جي معيار تائين پهتو ؟ </string>
     <string name="kf1b08"> ڇا شرڪت ڪندڙ ماءُ تحقيق ۾ حصو وٺڻ جي اجازت ڏني؟ </string>
     <string name="kf1b09"> جيڪڏهن نه ته سبب ٻڌايو؟ </string>
@@ -898,14 +899,11 @@
     <string name="kapr13g"> هڪ ٻار جي مرده پيدائش ۽ هڪ ٻار جي زنده پيدائش </string>
     <string name="kapr14"> تاريخ </string>
 
+    <string name="kfa1"> جانچ جي جڳهه </string>
 
-    <string name="kf1a0"> جانچ جي جڳهه </string>
-    <string name="kf1a1"> تحقيق ڪندڙ جو نالو ۽ سڃاڻپ </string>
-    <string name="kf1a2"> جانچ جو علائقو </string>
+    <string name="kf1a2"> ماءُ جو نالو </string>
     <string name="kf1a3"> ماءُ جو سڃاڻپ نمبر </string>
-    <string name="kf1a4"> ماءُ جو نالو </string>
-    <string name="kf1a5"> جانچ نمبر </string>
-
+    <string name="kf1a4"> جانچ نمبر </string>
 
     <string name="kf2a1"> مڪمل رهائشي پتو. </string>
     <string name="kf2a2"> گهر جي سربراه جو نالو </string>
