some more changes in app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -900,6 +900,8 @@
     <string name="kapr14"> تاريخ </string>
 
     <string name="kfa1"> جانچ جي جڳهه </string>
+    <string name="kfa1a"> صحت مرڪز </string>
+    <string name="kfa1b"> گهر </string>
 
     <string name="kf1a2"> ماءُ جو نالو </string>
     <string name="kf1a3"> ماءُ جو سڃاڻپ نمبر </string>
