some more changes in app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -250,7 +250,7 @@
     <string name="kf1b01"> ڄمڻ وقت جو وزن لکو </string>
     <string name="kf1b01a"> گرامن ۾ </string>
     <string name="kf1b02"> ڇا ٻار 1200 گرام کان وڌيڪ يا 2500 گرام يا ان کان گھٽ وزن وارو هو؟ </string>
-    <string name="kf1b03"> ۾ ڇا شرڪت ڪندڙ چونڊيل يونين ڪائونسل </string>
+    <string name="kf1b03"> ڇا شرڪت ڪندڙ چونڊيل يونين ڪائونسل ۾ رھي ٿو؟ </string>
     <string name="kfh2"> Exclusion Criteria </string>
     <string name="kf1b04"> ڇا ٻار کي سامهون ڏنل ڪا نشاني يا علامت آهي؟ آپشن جي سامهون ها يا نه لکو </string>
     <string name="kf1b04_h1"> شديد طبعي انفيڪشن </string>
