--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -911,10 +911,10 @@
     <string name="kf2a2"> گهر جي سربراه جو نالو </string>
     <string name="kf2a3"> رابطي جو نمبر </string>
     <string name="kf2a4"> گهر جي فردن جو تعداد </string>
-    <string name="kf2a5"> داخل ٿيل ماءُ جو نالو </string>
-    <string name="kf2a6"> تحقيقي علائقو. </string>
-    <string name="kf2a7"> داخل ٿيل ماءُ جو سڃاڻپ نمبر </string>
-    <string name="kf2a8"> داخل ٿيل ماءُ جو نالو </string>
+    <string name="kf2a5"> 5 سالن کان گهٽ عمر وارن ٻارن جو ڪل تعداد </string>
+    <string name="kf2a6"> حصي وٺڻ واري جو شناخت نمبر لکو </string>
+    <string name="kf2a7"> داخل ٿيل ماءُ جو نالو </string>
+    <string name="kf2a8"> داخل ٿيل ماءُ جو سڃاڻپ نمبر </string>
 
 
     <string name="kf3a3"> داخل ٿيل ماءُ جو نالو </string>
