some bugs fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -371,7 +371,7 @@
     <string name="kf2b09"> ڇا الٽراسائونڊ / ٽي وي ايڪسروحمل دوران ڪرايو. </string>
 
 
-    <string name="kf2b10"> ندازي مطانق حمل جو وقت ڪيترو آهي. ڏسو جيڪڏهن التراسائونڊ رپورٽ موجود آهي. </string>
+    <string name="kf2b10"> اندازي مطانق حمل جو وقت ڪيترو آهي. ڏسو جيڪڏهن التراسائونڊ رپورٽ موجود آهي. </string>
     <string name="kf2b10a"> الٽراسائونڊ موجود آهي </string>
     <string name="kf2b10b"> الٽراسائونڊ موجود نه آهي </string>
     <string name="kf2b10c"> هفته </string>
