some bugs fixed and add some new functionalities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -379,7 +379,7 @@
 
 
     <string name="kf2b11"> ٻار جو وزن لکو جيڪڏهن وزن نه لکيل آ ته صحت جي عملي کي چئو وزن ڪري. </string>
-    <string name="kf2b11a"> وزن </string>
+    <string name="kf2b11a"> وزن گرام ۾ </string>
 
 
     <string name="kf2b12"> ڪل حملن جو تعداد هن حمل سان گڏ </string>
