commit some bugs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -591,7 +591,7 @@
     <string name="kf3c14"> جيڪڏهن نه، ته سبب ڇا هو. </string>
 
 
-    <string name="kf3c15"> ڇا توهان کي بنا ڪپڙن جي ٻار کي ماءُ جي ڇاتي سان لڳائڻ جا فائيدا خبر آهن؟ (KMC) </string>
+    <string name="kf3c15"> ڇا توهان کي بنا ڪپڙن جي ٻار کي ماءُ جي ڇاتي سان لڳائڻ جا فائيدا خبر آهن؟ (KMC) هدايتون : تڪڙ نه ڪريو ۽ تحقيق يا اندازو نه لڳايو </string>
 
 
     <string name="kf3c16"> توهان جي خيال ۾ چمڙيءَ سان چمڙيءَ جو ميلاپ توهان ۽ توهان جي گھٽ وزن واري ٻار لاءَ ڪيترو فائدي مند رهيو؟ </string>
@@ -724,7 +724,7 @@
     <string name="kf3d11"> توهان 24 ڪلاڪن جي دوران اندازن گھڻا دفعا کير/ٿڃ پياريو؟ </string>
     <string name="kf3d11a"> وقت جو تعداد </string>
 
-    <string name="kf3d12"> ڇا توهان پنهنجي ٻار کي صرف ۽ صرف پنهنجي ٿڃ پياريو ٿا ؟ </string>
+    <string name="kf3d12"> ڇا توهان پنهنجي ٻار کي صرف ۽ صرف پنهنجي ٿڃ پياريو ٿا ؟ (اڪسڪليوزو جو مطلب آهي صرف ماءَ جو کير ۽ صرف ڪا دوا) </string>
 
 
     <string name="kf3d13"> توهان ڪيترن ڪلاڪن کان پنهنجي ٻآر کي صرف ۽ صرف پنهنجي ٿڃ تي رکيو آهي / صرف پنهنجي ٿڃ پياري آهي؟ </string>
@@ -733,7 +733,7 @@
     <string name="kf3d14"> ڪيتري عرصي تائين توهان پنهنجي ٻار کي صرف ۽ صرف پنهنجو کير/ٿڃ پياريو. </string>
 
 
-    <string name="kf3d15"> ڇا توهان پنهنجي کير کان سواءِ ٻار کي ٻيو ڪجھ ڏنو؟ </string>
+    <string name="kf3d15"> ڇا توهان پنهنجي کير کان سواءِ ٻار کي ٻيو ڪجھ ڏنو؟ ماءُ جي کير کان علاوه پاڻي، جوس ۽ ٻي ڪا شيءِ ڏني وئي </string>
 
 
     <string name="kf3d16"> ماءُ جي کير کان علاوه توهان پنهنجي ٻار کي ڪيتري عمر ۾پهريون دفعو چانھ، جوس يا ٻيو ڪجھ ڏنو؟ </string>
@@ -762,7 +762,7 @@
     <string name="kf3d18a"> وقت جو تعداد</string>
 
 
-    <string name="kf3eh1"> نئي ڄاول ٻار جو جائزو. </string>
+    <string name="kf3eh1"> (بيڪٽيريا يا زخم) </string>
 
     <string name="kf3e01"> ٻار جو وزن ڪيو </string>
     <string name="kf3e01a"> گرام </string>
@@ -825,10 +825,10 @@
     <string name="kf3e14"> ڇا ٻار هاڻي چڳي طرح کير پيئڻ ڇڏي ڏنو آهي؟  (مهرباني ڪري ماءُ کي چئو ته ٻار کي کير پياريڻ لاءِ ڇاتي سان لڳائي). </string>
 
 
-    <string name="kf3e15"> مشاهدي دوران بلڪل کير نه پيئو/ پئي يا چوسي. صرف ماءُ کان پڇو.  </string>
+    <string name="kf3e15"> مشاهدي دوران بلڪل کير نه پيئو/ پئي يا چوسي. صرف ماءُ کان پڇو. صرف ماءُ کان پڇو.  </string>
 
 
-    <string name="kf3e16"> ٻارجي کير پيئڻ جي صلاحيت ڪمزور آهي. صرف ماءُ کان پڇو.  </string>
+    <string name="kf3e16"> ٻارجي کير پيئڻ جي صلاحيت ڪمزور آهي. صرف ماءُ کان پڇو. صرف ماءُ کان پڇو.  </string>
 
 
     <string name="kf3e17"> ٻارصفا کير پيئڻ جي لائق نه آهي؟ </string>
