done some changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -246,8 +246,8 @@
     <string name="kf1b04"> ڇا ٻار کي سامهون ڏنل ڪا نشاني يا علامت آهي؟ آپشن جي سامهون ها يا نه لکو </string>
     <string name="kf1b04_h1"> شديد طبعي انفيڪشن </string>
     <string name="kf1b0401"> صرف هٿ لڳائڻ سان ئي چر پر ڪري ٿو </string>
-    <string name="kf1b0402"> ماءُ جو کير صحيحِ ٿو پئي </string>
-    <string name="kf1b0403"> بخار 38 سينٽي گريڊ يا ان کان وڌيڪ </string>
+    <string name="kf1b0402"> ٻارماءُ جو کير صحيحِ نه ٿو پئي </string>
+    <string name="kf1b0403"> بخار 38 سينٽي گريڊ کان وڌيڪ </string>
     <string name="kf1b0404"> تمام گھڻو ٿڌو (32 سينٽي گريڊ کان گھٽ) </string>
     <string name="kf1b0405"> شديد پاسراٽيون/ کڏا پوڻ </string>
     <string name="kf1b04_h2"> شديد بيماريون </string>
