add one question

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -270,6 +270,7 @@
     <string name="kf1b0504"> نفسياتي بيماري </string>
     <string name="kf1b0505"> ٻيو ڪجھ </string>
     <string name="kf1b06"> ڇا ٻار کي ڪنهن جديد حفاظتي مرڪز تي موڪلڻ جي ضرورت هئي؟ </string>
+    <string name="kf1b0602"> ڇا ٻار جي 48 ڪلاڪن جي اند اسڪرينگ ڪئي وئي آهي؟ </string>
     <string name="kfh3"> Eligibility </string>
     <string name="kfh4"> Informed Consent </string>
     <string name="kf1b07"> ڇا اثرائتي حصو وٺڻ جي معيار تائين پهتو ؟ </string>
