fixed some changes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -631,7 +631,7 @@
 
     <string name="kf3dh1"> ٿڃ پيارڻ جو عمل  </string>
 
-    <string name="kf3d19"> ڇا توهان ڪڏهن پنهنجي کير پياريو آهي؟  </string>
+    <string name="kf3d19"> ڇا توهان پنهنجي موجوده ٻار کي ڪڏهن پنهنجي تڄ پياري ؟  </string>
 
     <string name="kf3d01"> توهان ٻار کي ڄمڻ جي ڪيتري وقت کانپوءِ پنهنجو کير پياريو. </string>
     <string name="kf3d01a"> پيدائش کان پوء فوري طور تي </string>
