--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -490,6 +490,10 @@
     <string name="kf3b01f"> چوڏهون ڏينهن </string>
     <string name="kf3b01g"> ايڪيهون ڏينهن </string>
     <string name="kf3b01h"> اٺاويهون ڏينهن </string>
+    <string name="kf3b01i"> 59 ڏينهن </string>
+    <string name="kf3b01j"> 120 ڏينهن </string>
+    <string name="kf3b01k"> 180 ڏينهن </string>
+    <string name="kf3b01l"> 365 ڏينهن </string>
 
 
 
