fixed some changes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -767,7 +767,7 @@
     <string name="kf3e01"> ٻار جو وزن ڪيو </string>
     <string name="kf3e01a"> گرام </string>
 
-    <string name="kf3e22"> ٻار جو وزن ڪيو (cm) </string>
+    <string name="kf3e22"> ٻار جو ڊيگهه ڪيو </string>
     <string name="kf3e22a"> ڊيگهه </string>
 
     <string name="kf3eh9"> ASSESSMENT OF UMBILICAL CORD (DAY 14, 28)</string>
