--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -998,6 +998,7 @@
 
     <string name="kf3a3"> داخل ٿيل ماءُ جو نالو </string>
     <string name="kf3a4"> نئي ڄاول ٻارجواسٽيڊي نمبر </string>
+    <string name="degree"> &#xb0; </string>
 
 
     <!--Headings-->
