fixed some changes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="years"> سال </string>
     <string name="months"> مهينا </string>
     <string name="times"> تعداد </string>
+    <string name="time"> وقت </string>
     <string name="timesd"> ويمن جو تعداد </string>
     <string name="others"> ٻيو ڪجھ وضاحت ڪريو </string>
     <string name="other"> ٻيو ڪجھ وضاحت ڪريو </string>
